--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,6 +1,6 @@
 .hero{
     height: calc(100vh - 100px);
-    background: linear-gradient(180deg, #0c0c1d, #4a4ab8);
+    background: linear-gradient(180deg, #0c0c1d, #ca50ce);
 
     .wrapper{
         max-width: 1366px;
@@ -17,7 +17,7 @@
 
             h2{
                 font-size: 30px;
-                color: rebeccapurple;
+                color: rgb(106, 41, 112);
                 letter-spacing: 10px;
             }
 
